# awo

./: .gitignore  AWO.sln  CMakeLists.txt  Common.props  Makefile  README.md  TODO_dump.rst
AWO/: AWO.vcxproj  AWO.vcxproj.filters  CMakeLists.txt  Makefile  main.c
AWO/Include/: AWO.h  awo.h  definitions.h  game.h  game_data.h  game_editor.h  game_message.h  initialization.h  types.h
AWO/Include/AWO/: CO_data.h  army_types.h  awo.h  editor_game.h  entity_texture_reader.h  game.h  game_data.h  game_message.h  game_window.h  macros.h  palette_data.h  property_data.h  property_types.h  sprite_sheet_data.h  tile_types.h  tile_variations.h  types.h  unit_animations.h  unit_types.h  weather.h
AWO/Include/Entity_Texture_Reader/: entity_texture_reader.h
AWO/Include/Game/: editor_game.h  game.h
AWO/Include/Game_Controller/: game_editor_controller.h
AWO/Include/Game_Data/: UI_data.h  army_types.h  clock_data.h  game_data.h  property_types.h  tile_data.h  tile_types.h  tile_variations.h  unit_animations.h  unit_data.h  unit_types.h  weather.h
AWO/Include/Game_Message/: game_message.h
AWO/Include/Game_Window/: game_window.h
AWO/Internal/Camera/: _camera.h  camera.c  camera.h  focus.c  get_camera_subject_data.c  mouse_pan_mode.c  zoom.c
AWO/Internal/Clock/: _clock.h  clock.c  clock.h  game_clock.h
AWO/Internal/Clock/Headers/: clock_subscriber_event_cb.h  tick_event.h
AWO/Internal/Clock/Pub_Sub/: clock_pub_sub.c  clock_pub_sub.h  pub_sub.c
AWO/Internal/Clock/Tick_Event/: print_tick_events_list.c  tick_event.h
AWO/Internal/Clock/Timer/: clock_timer.c  clock_timer.h
AWO/Internal/Config/: config.h
AWO/Internal/Entity_Texture_Reader/: entity_texture_reader.c  entity_texture_reader.h
AWO/Internal/GL_Helpers/: create_shader_program.c  create_texture.c  delete_texture.c  gl_helpers.h  glad.c  read_texture_data.c
AWO/Internal/Game_Data/: game_data.c  game_data.h
AWO/Internal/Game_Data/Animation/: animation.c
AWO/Internal/Game_Data/CO_Data/: CO_data_access.c  CO_data_creation.c
AWO/Internal/Game_Data/Clock_Data/: clock_data.c
AWO/Internal/Game_Data/Frame/: _frame.h
AWO/Internal/Game_Data/Headers/: army_types.h  weather.h
AWO/Internal/Game_Data/Palette_Data/: _palette.h  _palette_data.h  game_palette.h  get_palette_NDC_index.c  palette_NDC_index.c  palette_data.c  palette_data.h
AWO/Internal/Game_Data/Property_Data/: property_data.c  property_data.h  property_data_access.c
AWO/Internal/Game_Data/Tile_Data/: _tile_data.h  tile_data.c  tile_data.h  tile_placement_rule_access.c  tile_variation_data_access.c  tiles_data.h
AWO/Internal/Game_Data/UI_Data/: UI_data.h  UI_data_creation.c  enums.h
AWO/Internal/Game_Data/Unit_Data/: _units_data.h  unit_data.h  unit_data_access.c  unit_data_creation.c  units_data_access.c  (+1 more)
AWO/Internal/Input_State/: input_state.h
AWO/Internal/Linked_List/: linked_list.c  linked_list.h  list_entry.c  list_entry.h
AWO/Internal/Message_Service/: message_service.c  message_service.h  message_service_basic.c
AWO/Internal/Palette/: _palette.h  palette.c  palette.h  palette_index_access.c  update_palette.c  update_palette_property_lights.c  update_palette_property_weather.c  update_palette_tile_weather.c
AWO/Internal/Player/: player.c  player.h  player_index_enum.h
AWO/Internal/Render_Grid/: _render_grid.h  get_render_grid_VAO.c  render_grid.c  render_grid.h  update_render_grid.c
AWO/Internal/Renderers/: renderers.h
AWO/Internal/Sprite_Batch/: sprite_batch.c  sprite_batch.h
AWO/Internal/Stage/: _stage.h  generate_custom_stage.c  generate_filled_stage.c  generate_stage_from_string.c  stage.c  stage.h  stringify_stage.c  validate_stage.c  validate_stage_string_data.c
AWO/Internal/Texture_Reader/: texture_reader.c  texture_reader.h
AWO/Internal/Tile_Cursor/: tile_cursor.c  tile_cursor.h
AWO/Internal/Utilities/: hex_string_to_data.c  read_file.c  stb.c  utilities.h
AWO/Libs/: SDL_FontCache.c  cJSON.c  c_hashmap.c
AWO/Libs/Entity_Texture_Reader/: entity_texture_reader.c  entity_texture_reader.h
AWO/Libs/Game/: _game.h  create_game.c  game.c  game.h  init_game_rendering.c  prepare_design_room_game.c  render_game.c  run_game.c  unprepare_game.c  update_game.c
AWO/Libs/Game_Data/: game_data.c  game_data.h
AWO/Libs/Game_Message/: game_message.c  game_message.h  game_message_simple.c
AWO/Libs/Game_Renderer/: _game_renderer.h  game_renderer.c  game_renderer.h
AWO/Libs/Game_Window/: _game_window.h  game_window.c  game_window.h
AWO/Libs/Input_Handlers/: input_handlers.h
AWO/Libs/cglm/: affine.c  bezier.c  box.c  cam.c  curve.c  ease.c  euler.c  frustum.c  io.c  mat3.c  mat4.c  plane.c  project.c  quat.c  sphere.c  vec3.c  vec4.c
AWO/Resources/: visuals.json
AWO/Resources/Data/: game_data.json  visuals.json
AWO/Resources/Shaders/: basic.frag  basic.vert  blue.frag  grid.vert  sprite.frag  sprite.vert  tiles.frag  tiles.vert
AWO/Resources/Shaders_ES/: basic.frag  basic.vert  grid.frag  sprite.frag  sprite.vert  tiles.frag  tiles.vert
AWO/Src/: conf.h  game.h  init.c  macros.h  main.c  types.h
AWO/Src/Emscripten_Exports/: emx.h  emx_editor.c  emx_game.c
AWO/Src/GL_Helpers/: create_glfw_window.c  create_projection_matrix.c  create_shader_program.c  create_texture.c  gl_helpers.h  read_texture_data.c
AWO/Src/Game/: _game.h  exit_game.c  game.c  game.h  game_exit.c  game_init.c  init.c  init.h  init_GL.c  init_game.c  init_game_rendering.c  player_index_enum.h  prepare_game.c  render_game.c  run_game.c  unprepare_game.c  update_game.c  update_game_window_dimensions.c
AWO/Src/Game_old/: game_arg_enums.h  game_exit.c  game_init.c
AWO/Src/Libraries/: SDL_FontCache.c  cJSON.c  c_hashmap.c
AWO/Src/Utilities/: hex_string_to_data.c  linked_list.c  linked_list.h  macros.h  read_file.c  round_float_to_int.c  utilities.c  utilities.h
AWO/Src/Utils/: utils.c
AWO/Src/Visuals/: JSON.c  JSON.h  data_access.h  data_init.h  load.h  process.h  processing.h  units.c  units.h  visuals.h  visuals_data.h  visuals_processing.h  visuals_structure.h
AWO/Src/cJSON/: cJSON.c
AWO/src/: main.c
(+683 files in other folders)
